contenteditable items in a shadow root do not accept IME input from MacOS
Categories
(Core :: DOM: Editor, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox69 | --- | fixed |
People
(Reporter: twisniewski, Assigned: edgar)
References
(Blocks 1 open bug, )
Details
(Keywords: inputmethod, reproducible)
Attachments
(1 file)
The MacOS keyboard IME for Chinese text does not seem to work for contenteditable elements within a shadow root (the IME works fine for contenteditable elements not in a shadow root).
This can be seen on this test-case or even on the MDN page for contenteditable.
Comment 1•6 years ago
|
||
I can reproduce the issue on Nightly69.0a1 Windows10 MS-IME and ATOK.
Comment 2•6 years ago
|
||
Do we know if this is a recent regression? I'm asking simply because ATOK reminds me of a 68 regression bug 1549930.
Comment 3•6 years ago
|
||
(In reply to Hsin-Yi Tsai [:hsinyi] from comment #2)
Do we know if this is a recent regression? I'm asking simply because ATOK reminds me of a 68 regression bug 1549930.
Okay, seems not related to bug 1549930. It is reproducible on firefox 66.
| Assignee | ||
Comment 4•6 years ago
•
|
||
I found that HTMLEditor didn't receive eCompositionChange event, but not sure if it is related.
| Assignee | ||
Comment 5•6 years ago
|
||
Oh, I just found that the mComposed flag of eCompositionChange event is false, so it could not cross the boundary of shadow DOM.
| Assignee | ||
Comment 6•6 years ago
|
||
We could fix this issue by marking eCompositionChange event as a composed event. However, we plans to deprecate eCompositionChange event which is a gecko specific event, so maybe we should try to use eCompositionUpdate in HTMLEditor instead.
| Assignee | ||
Comment 7•6 years ago
|
||
| Assignee | ||
Comment 8•6 years ago
|
||
(In reply to Edgar Chen [:edgar] from comment #6)
We could fix this issue by marking
eCompositionChangeevent as a composed event.
I decided go with this way because there are some test failure after moving to eCompositionUpdate (comment #7), and it probably requires me more time to investigate.
However, we plans to deprecate
eCompositionChangeevent which is a gecko specific event, so maybe we should try to useeCompositionUpdatein HTMLEditor instead.
Is this something we want to do for the long term? If yes, I could file a follow-up bug for it.
| Assignee | ||
Comment 9•6 years ago
|
||
| Assignee | ||
Comment 10•6 years ago
|
||
| Assignee | ||
Comment 11•6 years ago
|
||
(In reply to Edgar Chen [:edgar] from comment #8)
However, we plans to deprecate
eCompositionChangeevent which is a gecko specific event, so maybe we should try to useeCompositionUpdatein HTMLEditor instead.Is this something we want to do for the long term? If yes, I could file a follow-up bug for it.
It seems "yes" per https://phabricator.services.mozilla.com/D33387#989677.
| Assignee | ||
Updated•6 years ago
|
Comment 12•6 years ago
|
||
| Assignee | ||
Comment 13•6 years ago
|
||
(In reply to Edgar Chen [:edgar] from comment #11)
(In reply to Edgar Chen [:edgar] from comment #8)
However, we plans to deprecate
eCompositionChangeevent which is a gecko specific event, so maybe we should try to useeCompositionUpdatein HTMLEditor instead.Is this something we want to do for the long term? If yes, I could file a follow-up bug for it.
It seems "yes" per https://phabricator.services.mozilla.com/D33387#989677.
Filed bug 1556336.
Comment 14•6 years ago
|
||
| bugherder | ||
Description
•