Bug 1553852 - Mark eCompositionChange as composed event; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D33387